test-data/elab/unification/infinite-solution.snapshot
exit status: 0

stdout = """
it : forall(Wrap : Type -> Type) -> (forall(A : ?1(#var(DeBruijnIndex(0))), _ : A -> Wrap(A)) -> Type) -> Type

"""

stderr = """
error: Type mismatch: expected `Wrap(f)`, found `f`
  ┌─ test-data/elab/unification/infinite-solution.pion:5:36
  │
5 │   = fun(Wrap, f) => f(_, fun(a) => a);
  │                                    ^

error: Could not infer expression to solve hole
  ┌─ test-data/elab/unification/infinite-solution.pion:5:23
  │
5 │   = fun(Wrap, f) => f(_, fun(a) => a);
  │                       ^


"""
